# SQL-DATABASE-Agent

./: .env.example  .gitignore  Dockerfile  README.md  amazon_test.db  create_amazon_test_db.py  docker-compose.yml  sales.db  start.bat
backend/: Dockerfile  pyproject.toml  test_run.py  test_stream.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  meta.py  system.py
backend/app/core/: config.py  db.py  logging.py  security.py
backend/app/graph/: builder.py  state.py
backend/app/graph/nodes/: _common.py  query_executor.py  result_explainer.py  schema_discovery.py  sql_generator.py  sql_repair.py  sql_validator.py
backend/app/llm/: factory.py  mock.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/prompts/: templates.py
backend/app/services/: agent_service.py  chart_inference.py  history_store.py  schema_service.py
backend/app/templates/: index.html
backend/app/utils/: csv_export.py
backend/tests/: conftest.py
backend/tests/unit/: test_chart_inference.py  test_security.py
db/: schema.sql
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/chart/: Chart.tsx
frontend/src/hooks/: useChatStream.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
nginx/: frontend.conf
scripts/: setup_sqlite.py  wait-for-db.sh
(+7 files in other folders)
