[project]
name = "sql-database-agent"
version = "0.1.0"
description = "Production-grade natural-language → SQL agent built with FastAPI + LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy==2.0.36",
    "psycopg[binary,pool]==3.2.3",
    "alembic==1.14.0",
    "langgraph==0.2.60",
    "langchain==0.3.13",
    "langchain-core==0.3.28",
    "langchain-openai==0.2.14",
    "langchain-anthropic==0.2.4",
    "langchain-google-genai>=2.0.1",
    "langsmith==0.1.147",
    "python-dotenv==1.0.1",
    "sse-starlette==2.1.3",
    "redis==5.2.1",
    "slowapi==0.1.9",
    "tenacity==9.0.0",
    "orjson==3.10.12",
    "httpx==0.28.1",
    "tabulate==0.9.0",
    "sqlparse==0.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "respx==0.21.1",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
